# ATM-Management

./: Bill.txt  CMakeLists.txt  CMakePresets.json  README.md  bank.cpp  bank.cppm  bank.txt  bank_tester.cpp
src/: bank.cpp  bank.cppm  bank_tester.cpp
